--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,8 +6,8 @@
                                              android:gravity="center_horizontal"
                                              android:orientation="vertical"
                                              tools:context="com.kovalchyk_at.a1000words.log_in.LoginActivity"
-                                             tools:layout_editor_absoluteY="81dp"
-                                             tools:layout_editor_absoluteX="0dp">
+                                             tools:layout_editor_absoluteX="0dp"
+                                             tools:layout_editor_absoluteY="81dp">
 
     <!-- Login progress -->
     <ProgressBar
@@ -16,31 +16,31 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1"/>
 
     <ScrollView
         android:id="@+id/login_scrollview"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:ignore="NotSibling"
-        app:layout_constraintTop_toTopOf="parent">
+        tools:layout_constraintLeft_creator="1">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -106,7 +106,7 @@
                 android:textStyle="bold"/>
 
             <Button
-                android:id="@+id/sign_up_button"
+                android:id="@+id/register_new_user"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/register_new_user"/>
@@ -142,11 +142,11 @@
                     tools:ignore="ButtonStyle"/>
 
                 <Button
-                    android:id="@+id/vk_sign_in_button"
+                    android:id="@+id/anonym_sign_in_button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="@string/vk_sign_in_button"
+                    android:text="@string/guest_sign_in_button"
                     tools:ignore="ButtonStyle"/>
 
             </LinearLayout>
