--- a/app/src/main/res/layout/activity_tabbed_container.xml
+++ b/app/src/main/res/layout/activity_tabbed_container.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.kovalchyk_at.a1000words.tabbed_container.TabbedContainerActivity">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/left_img_button"
@@ -13,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:contentDescription=""
+        android:contentDescription="@string/tabswitch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:contentDescription=""
+        android:contentDescription="@string/tabswitch"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -51,7 +50,7 @@
         <FrameLayout
             android:id="@+id/body_tabbed_fragment"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
         </FrameLayout>
     </LinearLayout>
