--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -5,7 +5,7 @@
                                              android:layout_height="match_parent"
                                              android:gravity="center_horizontal"
                                              android:orientation="vertical"
-                                             tools:context="com.kovalchyk_at.a1000words.log_in.LoginActivity"
+                                             tools:context="com.kovalchyk_at.a1000words.LoginActivity"
                                              tools:layout_editor_absoluteX="0dp"
                                              tools:layout_editor_absoluteY="81dp">
 
