--- a/app/src/main/res/layout/header_tab_fragment.xml
+++ b/app/src/main/res/layout/header_tab_fragment.xml
@@ -3,7 +3,8 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+    >
 
 
     <LinearLayout
@@ -53,10 +54,9 @@
 
         <ProgressBar
             android:id="@+id/learningProgressBar"
-            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+            style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:indeterminate="true"
             android:max="100"
             android:progress="50"
             android:visibility="visible"/>
