--- a/app/src/main/res/layout-land/activity_tabbed_container.xml
+++ b/app/src/main/res/layout-land/activity_tabbed_container.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/tabswitch"
+        android:onClick="tabButtonOnClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:srcCompat="@drawable/ic_left_tab_button"
@@ -23,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/tabswitch"
+        android:onClick="tabButtonOnClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:srcCompat="@drawable/ic_right_tab_button"
@@ -30,7 +32,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:gravity="top"
@@ -50,9 +52,9 @@
 
         <FrameLayout
             android:id="@+id/body_tabbed_fragment"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="end">
+            android:layout_gravity="right">
 
         </FrameLayout>
     </LinearLayout>
