--- a/app/src/main/res/layout-land/header_tab_fragment.xml
+++ b/app/src/main/res/layout-land/header_tab_fragment.xml
@@ -7,7 +7,7 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="16dp"
@@ -19,6 +19,30 @@
         app:layout_constraintRight_toLeftOf="@+id/profileImageView"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="RtlHardcoded">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginTop="4dp"
+            app:cardCornerRadius="32dp">
+
+            <ImageView
+                android:id="@+id/profileImageView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:layout_weight="1"
+                android:contentDescription=""
+
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_start"
+                tools:ignore="ContentDescription,RtlHardcoded"/>
+        </android.support.v7.widget.CardView>
 
         <EditText
             android:id="@+id/userName"
@@ -65,28 +89,5 @@
             android:visibility="visible"/>
 
     </LinearLayout>
-
-    <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="16dp"
-        app:cardCornerRadius="32dp">
-
-        <ImageView
-            android:id="@+id/profileImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:layout_weight="1"
-            android:contentDescription=""
-
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_start"
-            tools:ignore="ContentDescription,RtlHardcoded"/>
-    </android.support.v7.widget.CardView>
 
 </LinearLayout>
