--- a/app/src/main/res/layout/activity_tabbed_container.xml
+++ b/app/src/main/res/layout/activity_tabbed_container.xml
@@ -35,8 +35,8 @@
         app:srcCompat="@drawable/ic_right_tab_button"/>
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
         android:gravity="top"
