--- a/app/src/main/res/layout/body2_tabbed_fragment.xml
+++ b/app/src/main/res/layout/body2_tabbed_fragment.xml
@@ -6,11 +6,10 @@
     android:layout_weight="1"
     android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/progressBar3"
-        style="?android:attr/progressBarStyleHorizontal"
+    <ListView
+        android:id="@id/android:list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:progress="50"/>
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
