--- a/app/src/main/res/layout-land/activity_tabbed_container.xml
+++ b/app/src/main/res/layout-land/activity_tabbed_container.xml
@@ -31,20 +31,22 @@
         />
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         android:layout_marginTop="8dp"
         android:gravity="top"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/left_img_button"
+        app:layout_constraintRight_toLeftOf="@+id/right_img_button"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="MissingConstraints,Orientation">
 
         <FrameLayout
             android:id="@+id/header_tabbed_fragment"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="start">
 
@@ -54,7 +56,8 @@
             android:id="@+id/body_tabbed_fragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="right">
+            android:layout_gravity="right"
+            tools:ignore="RtlHardcoded">
 
         </FrameLayout>
     </LinearLayout>
