--- a/app/src/main/res/layout/activity_tabbed_container.xml
+++ b/app/src/main/res/layout/activity_tabbed_container.xml
@@ -17,7 +17,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.50"
         app:srcCompat="@drawable/ic_left_tab_button"/>
 
     <ImageView
@@ -31,17 +30,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.50"
         app:srcCompat="@drawable/ic_right_tab_button"/>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:gravity="top"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/left_img_button"
         app:layout_constraintRight_toLeftOf="@+id/right_img_button"
         app:layout_constraintTop_toTopOf="parent"
@@ -56,12 +53,28 @@
 
         </FrameLayout>
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/left_img_button"
+        app:layout_constraintRight_toLeftOf="@+id/right_img_button"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
+
         <FrameLayout
             android:id="@+id/body_tabbed_fragment"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center|bottom">
 
         </FrameLayout>
     </LinearLayout>
+
 </android.support.constraint.ConstraintLayout>
