--- a/app/src/main/res/layout/header_tab_fragment.xml
+++ b/app/src/main/res/layout/header_tab_fragment.xml
@@ -67,18 +67,19 @@
     </LinearLayout>
 
     <android.support.v7.widget.CardView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        app:cardCornerRadius="32dp">
+        app:cardCornerRadius="32dp"
+        tools:ignore="RtlHardcoded">
 
         <ImageView
             android:id="@+id/profileImageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
 
             android:layout_weight="1"
             android:contentDescription=""
