розібратись з реалізацією ExpandableListView та Body2_tabbed_adapter

--- a/app/src/main/res/layout/body3_tabbed_fragment.xml
+++ b/app/src/main/res/layout/body3_tabbed_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kovalchyk_at.a1000words.tabbed_menu.body3_tabbed_fragment"
+    tools:context="com.kovalchyk_at.a1000words.tabbed_menu.Body3_tabbed_fragment"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="81dp">
 
