--- a/app/src/main/res/layout/body2_tabbed_expandable_item.xml
+++ b/app/src/main/res/layout/body2_tabbed_expandable_item.xml
@@ -11,14 +11,17 @@
     <ProgressBar
         android:id="@+id/item_progress"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:layout_marginRight="8dp"
         android:layout_weight="2"/>
 
     <TextView
         android:id="@+id/item_Lable"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="right"
         android:layout_weight="1"
         android:text="TextView"/>
 
