--- a/app/src/main/res/layout/body2_tabbed_fragment.xml
+++ b/app/src/main/res/layout/body2_tabbed_fragment.xml
@@ -4,14 +4,11 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-    <TextView android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
-
     <ExpandableListView
         android:id="@+id/expand_progress_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
     </ExpandableListView>
 
 </LinearLayout>
