реалізовані всі три BodyX_tabbed_fragment необхідно додати слухачі подій та правильно зберігати стани фрагментів

--- a/app/src/main/res/layout/body2_tabbed_fragment.xml
+++ b/app/src/main/res/layout/body2_tabbed_fragment.xml
@@ -7,8 +7,7 @@
     <ExpandableListView
         android:id="@+id/expand_progress_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
     </ExpandableListView>
 
 </LinearLayout>
