--- a/app/src/main/res/layout/body2_tabbed_item.xml
+++ b/app/src/main/res/layout/body2_tabbed_item.xml
@@ -8,18 +8,31 @@
               android:paddingStart="?android:attr/listPreferredItemPaddingStart"
               android:textAppearance="?android:attr/textAppearanceListItemSmall">
 
-    <ProgressBar
-        android:id="@+id/item_progress"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"/>
-
-    <TextView
-        android:id="@+id/item_Lable"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_weight="1"
-        android:text="TextView"/>
+        android:orientation="vertical">
+
+        <ProgressBar
+            android:id="@+id/item_progress"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="8dp"
+        android:layout_weight="2"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/item_Lable"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="TextView"/>
+    </LinearLayout>
 
 </LinearLayout>
